2005-08-19  Don Allingham  <don@gramps-project.org>
	* src/GenericFilter.py: fix unicode problem with menu store

2005-08-18  Don Allingham  <don@gramps-project.org>
	* src/plugins/NavWebPage.py: code clean up
	* src/AddSpouse.py: remove unnecessary commit via add_family

2005-08-18  Mark Knoop  <mark@markknoop.com>
	* src/NavWebPage.py: move more HTML commands to CSS
	* src/data/main*.css: add support for HTML control from NavWebPage

2005-08-18  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* doc/gramps-manual/C/custom.xml: Match against DTD
	* doc/gramps-manual/C/usage.xml: Match against DTD
	* doc/gramps-manual/C/preface.xml: Match against DTD
	
2005-08-17  Don Allingham  <don@gramps-project.org>
	* src/plugins/NavWebPage.py: fix source reference links on the 
	source page, check for bad file name if archive is used.
	* src/FamilyView.py: commit person when removed from family

2005-08-18  Eero Tamminen  <eerot@sf>
	* src/GenericFilter.py, src/Marriage.py, src/plugins/TimeLine.py,
	  src/plugins/SimpleBookTitle.py: add localization context for
	  "Title" string (needed in Finnish)
	* src/ReportUtils.py: Add header option for draw_legend()
	* src/plugins/StatisticsChart.py: add headers to legends and
	  barcharts, change chart type names to singular form, add
	  support for ProgressMeter, swap bar&text position as text
	  rightaligning in Gramps is broken (it can't know font metrics)

2005-08-17  Don Allingham  <don@gramps-project.org>
	* src/Marriage.py: fix lds_data_object problem
	* src/GrampsDBCallback.py: look for GRAMPS_SIGNAL environment
	variable equal to 1 to enable signal debugging
	* src/ChooseParents.py: disconnect signals on close, do fewer
	commits

2005-08-17  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/plugins/ExportVCalendar.py: fixed import for localtime,
	corrected type of Utils and params to Until.family_name
	made "Version" upper case as demanded by Korganiser and
	the spec (I think).
	
2005-08-17  Eero Tamminen  <eerot@sf>